syntax = "proto3";

import "proto/vega.proto";

package grpc;
option go_package = "api";

service trading {
    rpc CreateOrder(vega.Order) returns (OrderResponse);
    rpc GetOrderBookDepth(vega.Market) returns (vega.OrderBookDepth);
}

message OrderResponse {
    bool success = 1;
}